# file_sweeper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: file-sweeper.md
src/file_sweeper/: __init__.py  core.py
tests/: test_core.py
