[tool.poetry]
name = "file-sweeper"
version = "0.1.0"
description = "A file cleaning utility"
authors = ["wallwindows"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.0"
pathlib2 = "^2.3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
